IFS-2390 - Added security tests and tidy up